# ai-agent-hackathon

./: .env  .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: chat.py  issues.py
backend/app/models/: schemas.py
backend/app/services/: graph_service.py  llm_service.py
backend/tests/: test_chat.py  test_llm.py  test_main.py
frontend/: .gitignore  .prettierrc  README.md  job-post-creator-v2-frontend-integration.md  job-post-creator-v2-refactor-plan.md  max.yaml  package-lock.json
frontend/.github/workflows/: delete.yaml  deploy-release.yaml  workloads.yaml
frontend/cloud/: app_registration.tf
frontend/docs/diagrams/: architecture.puml  painpoint_assistant_architecture.puml
frontend/docs/diagrams/workspaces/: architecture.puml  assistants-chat.puml  create-workspace.puml  delete-workspace.puml  dsb-chat-ai-search.puml  dsb-chat-vector-db.puml  dsb-chat.puml  edit-workspace.puml  list-workspaces.puml  recent-workspaces.puml  update-workspace-sidebar-visibility.puml
frontend/src/: DockerfileLaunchpadUI  bootstrapClientEnvironment.sh  package.json
frontend/src/app/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1738836374482-0ef2a59a9205.mjs
frontend/src/app/public/: dev.js  env.js  force-refresh.js  manifest.json  prd.js  tst.js
frontend/src/app/src/: App.tsx  config.ts  global.ts  i18n.ts  index.css  index.tsx  msalEventTracker.ts  tailwind.css
frontend/src/app/src/components/: CodeInterpreterLink.tsx  DownloadLink.tsx  FeatureTile.css  FeatureTile.tsx  SimpleCitations.tsx  (+13 more)
(+509 files in other folders)
