[project]
name = "ai-painpoint-discovery-backend"
version = "0.1.0"
description = "Backend for AI Painpoint Discovery Assistant"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "neo4j",
    "openai",
    "pydantic",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "httpx"
]