[project]
name = "ai-painpoint-discovery-backend"
version = "0.1.0"
description = "Backend for AI Painpoint Discovery Assistant"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "neo4j",
    "openai",
    "pydantic",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "httpx"
]

[tool.uv]
dev-dependencies = []

[tool.uv.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
docker-up = "docker compose -f ../docker-compose.yml up -d"
docker-down = "docker compose -f ../docker-compose.yml down"