[project]
name = "ai-painpoint-discovery-backend"
version = "0.1.0"
description = "Backend for AI Painpoint Discovery Assistant"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "neo4j",
    "openai",
    "pydantic",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart",
    "httpx",
    "requests"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
managed = true
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"